sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__false11/errors.jtrrouter
Error: Not numerical maxspeed definition in lane '1_0'.
Quitting (on error).
